@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
 \docType{methods}
 \name{get.fields}
 \alias{get.fields}
@@ -9,9 +9,12 @@
 \alias{get.fields,hyphy-method}
 \alias{get.fields,jplace,ANY-method}
 \alias{get.fields,paml_rst-method}
+\alias{get.fields,raxml-method}
 \title{get.fields method}
 \usage{
 get.fields(object, ...)
+
+\S4method{get.fields}{raxml}(object, ...)
 
 \S4method{get.fields}{beast}(object, ...)
 
