@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
 \docType{methods}
 \name{get.tree}
 \alias{get.tree}
@@ -10,8 +10,11 @@
 \alias{get.tree,jplace-method}
 \alias{get.tree,paml_rst-method}
 \alias{get.tree,phylo-method}
+\alias{get.tree,raxml}
 \title{get.tree method}
 \usage{
+get.tree(object, ...)
+
 get.tree(object, ...)
 
 get.tree(object, ...)
@@ -42,6 +45,8 @@ phylo object
 get.tree method
 
 get.tree method
+
+get.tree method
 }
 \examples{
 nwk <- system.file("extdata/HYPHY", "labelledtree.tree", package="ggtree")
@@ -50,6 +55,8 @@ hy <- read.hyphy(nwk, ancseq)
 get.tree(hy)
 }
 \author{
+Guangchuang Yu \url{http://ygc.name}
+
 Guangchuang Yu \url{http://ygc.name}
 }
 
