@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
 \docType{methods}
 \name{groupClade}
 \alias{groupClade}
@@ -12,9 +12,12 @@
 \alias{groupClade,jplace-method}
 \alias{groupClade,paml_rst-method}
 \alias{groupClade,phylo-method}
+\alias{groupClade,raxml-method}
 \title{groupClade method}
 \usage{
 groupClade(object, node, group_name = "group")
+
+\S4method{groupClade}{raxml}(object, node, group_name = "group")
 
 \S4method{groupClade}{beast}(object, node, group_name = "group")
 
