@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
 \docType{methods}
 \name{groupOTU}
 \alias{groupOTU}
@@ -12,9 +12,12 @@
 \alias{groupOTU,jplace-method}
 \alias{groupOTU,paml_rst-method}
 \alias{groupOTU,phylo-method}
+\alias{groupOTU,raxml-method}
 \title{groupOTU method}
 \usage{
 groupOTU(object, focus, group_name = "group")
+
+\S4method{groupOTU}{raxml}(object, focus, group_name = "group")
 
 \S4method{groupOTU}{beast}(object, focus, group_name = "group")
 
