@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R, R/phylo.R
 \docType{methods}
 \name{gzoom}
 \alias{gzoom}
@@ -9,9 +9,13 @@
 \alias{gzoom,hyphy-method}
 \alias{gzoom,paml_rst-method}
 \alias{gzoom,phylo-method}
+\alias{gzoom,raxml-method}
 \title{gzoom method}
 \usage{
 gzoom(object, focus, subtree = FALSE, widths = c(0.3, 0.7))
+
+\S4method{gzoom}{raxml}(object, focus, subtree = FALSE, widths = c(0.3,
+  0.7))
 
 \S4method{gzoom}{beast}(object, focus, subtree = FALSE, widths = c(0.3,
   0.7))
