@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R
 \docType{methods}
 \name{plot}
 \alias{plot}
@@ -8,8 +8,15 @@
 \alias{plot,codeml_mlc,ANY-method}
 \alias{plot,hyphy,ANY-method}
 \alias{plot,paml_rst,ANY-method}
+\alias{plot,raxml,ANY-method}
 \title{plot method}
 \usage{
+\S4method{plot}{raxml,ANY}(x, layout = "rectangular",
+  branch.length = "branch.length", show.tip.label = TRUE,
+  tip.label.size = 4, tip.label.hjust = -0.1, position = "branch",
+  annotation = "bootstrap", ndigits = 2, annotation.size = 3,
+  annotation.color = "black", ...)
+
 \S4method{plot}{beast,ANY}(x, layout = "rectangular",
   branch.length = "branch.length", show.tip.label = TRUE,
   tip.label.size = 4, tip.label.hjust = -0.1, position = "branch",
@@ -62,6 +69,14 @@
 \item{annotation.color}{color of annotation}
 
 \item{...}{Additional argument list}
+
+\item{tip.label.size}{size of tip label}
+
+\item{tip.label.hjust}{hjust of tip.label}
+
+\item{annotation.size}{size of annotation}
+
+\item{annotation.color}{color of annotation}
 }
 \value{
 plot
