@@ -1,15 +1,18 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
 \docType{methods}
-\name{show,beast-method}
+\name{show,raxml-method}
 \alias{show}
 \alias{show,beast-method}
 \alias{show,codeml-method}
 \alias{show,codeml_mlc-method}
 \alias{show,hyphy-method}
 \alias{show,paml_rst-method}
+\alias{show,raxml-method}
 \title{show method}
 \usage{
+\S4method{show}{raxml}(object)
+
 \S4method{show}{beast}(object)
 
 \S4method{show}{codeml}(object)
